commit tree 0c177e9cb76d97bdeb3137f5a1775f3c394938e8

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Listening to Nodes</title>
   <style>
    div {
-     border: 1px solid red;
+     border: 1px solid rgb(0, 26, 255);
      padding: 6px;
      min-height: 12px;
    }
